<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:orientation="vertical"
    android:padding="25dp"
    tools:ignore="ContentDescription">

    <RelativeLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/addressContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_country"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/updated_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_time"
                android:textSize="14sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/overviewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/weather_position"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-thin"
                android:text="@string/temperature"
                android:textSize="90sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/temp_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_temp" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/temp_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_temp" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/detailsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#3CF1EBF1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunrise"
                        app:tint="#FFFFFF" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunrise"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunrise_time"
                        android:textSize="14sp" />
                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#3CF1EBF1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunset"
                        app:tint="#FFFFFF" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunset"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunset_time"
                        android:textSize="14sp" />
                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#3CF1EBF1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/wind"
                        app:tint="#FFFFFF" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind_time"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#3CF1EBF1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/pressure"
                        app:tint="#FFFFFF" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure_time"
                        android:textSize="14sp" />
                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#3CF1EBF1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/humidity"
                        app:tint="#FFFFFF" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity_time"
                        android:textSize="14sp" />
                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#3CF1EBF1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/info"
                        app:tint="#FFFFFF" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/owner"
                        android:textSize="12sp"
                        android:textStyle="italic|bold" />

                    <TextView
                        android:id="@+id/about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/abdusamid"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/error"
        android:visibility="invisible" />


</RelativeLayout>